@@ -12,6 +12,8 @@ Major changes between version 2.0 and 2.0.1
 
   CHANGES FROM DIALD 1.0 BRANCH
   - Fixed installation of PAM module.
+  - Get the correct clocks per second value for the return from
+    times() using sysconf(), CLK_TCK or HZ.
 
 
 Major changes between version 1.0 and 2.0
